add mouse to tmux config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -29,6 +29,8 @@ bind e new-window -n "~/.tmux.conf.local" "EDITOR=\${EDITOR//mvim/vim} && EDITOR
 # reload configuration
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
+# mouse support
+set -g mouse on
 
 # -- display -------------------------------------------------------------------
 
